# Learning-OpenGL

./: .gitignore  Build.sh  CMakeLists.txt  README.md
Res/Shaders/: shader.fs  shader.vs
include/: shader_s.h
include/glad/: glad.h
src/: Main.cpp  glad.c
